# Changelog

## [Unreleased]
### Fixes
- added checks in DQDIMACS parser for errors and fixed parsing of free variables
- some solved instances by HQSpre during parsing were not caught, leading to a thrown exception
- changed the algorithm of localisation to save on memory/time

### New
- added parser for QBFs in prenex cleansed (D)QCIR format (prenex DQCIR is like prenex QCIR, where we can add quantifier henkin(v, v1, ..., vn) which represents existential variable v with dependency set {v1, ..., vn})
- added an option to force file format (otherwise it is selected automatically by file type)
- DQBDD now works also on Mac

## [1.1] - 26-04-2020
### Fixes
- dynamic reordering is temporarily turned off during creation of existential dependency copies

### New
- added option to turn on/off dynamic reordering (turned on by default)

## [1.0] - 24-04-2020
- initial release

[1.1]: https://github.com/jurajsic/DQBDD/releases/tag/v1.1
[1.0]: https://github.com/jurajsic/DQBDD/releases/tag/v1.0